test/arrays/types-resized-array/testNilableBorrowed.good
./ArrayTest.chpl:1: In function 'testArray':
./ArrayTest.chpl:5: error: creating a 'new borrowed' type is a not allowed
  testNilableBorrowed.chpl:8: called as testArray(type t = borrowed T?)
